discussion/kv_engine/145802/145802_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44140: Make KVStore::getCollectionsManifest return status

Change-Id: Ibedcb0e5528f033a6063308890af20bc99da6361

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-02-18 07:33:24.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-18 07:59:21.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7162/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20: error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
            return false;
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7162/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7162/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33681/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1511): error C2440: "return": cannot convert from "bool" to "CouchKVStore::CompactDBInternalStatus" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33681/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28958/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28958/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7809/ : FAILURE

Compile error at [2021-02-18T07:36:24.851Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7809/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8756/ : FAILURE

Compile error at [2021-02-18T07:46:51.983Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot convert ?bool? to ?CouchKVStore::CompactDBInternalStatus? in return
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8756/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8894/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9102/ : FAILURE

Compile error at [2021-02-18T07:42:21.042Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9102/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16655/ : FAILURE

Compile error at [2021-02-18T07:44:23.796Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16655/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5699/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
